--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "papaparse": "^5.4.1"
   },
   "scripts": {
-    "test": "node tests/test_parse_csv.js"
+  "test": "node tests/test_parse_csv.js",
+  "check-dom": "python3 scripts/check_div_balance.py index.html"
   }
 }
